# MultyT

./: .gitlab-ci.yml  CMakeLists.txt  README.md
documentation-config/: Doxyfile  README.md
resources/: res.qrc
resources/assets/: about.txt
resources/qml/: main.qml
resources/qml/common/: Common.qml  Global.qml  Theme.qml  Utilities.qml  qmldir
resources/qml/controls/: BodyText.qml  IconButton.qml  OverlayedImage.qml  RecordDelegate.qml  StatIndicator.qml  TextButton.qml  TextFieldControl.qml  TimeIndicator.qml  qmldir
resources/qml/panels/: GameStatPanel.qml  HeaderPanel.qml  ImagesPanel.qml  InfoPopup.qml  InputPanel.qml  KeyPadPanel.qml  MenuPanel.qml  RecordsPanel.qml  qmldir
resources/qml/views/: BasicView.qml  EndView.qml  GameView.qml  StartView.qml  qmldir
resources/translations/: MultyT_en_US.ts
src/: main.cpp
src/controllers/: GameController.cpp  GameController.h
src/data/: Logic.cpp  Logic.h  Record.cpp  Record.h  RecordModel.cpp  RecordModel.h  Records.cpp  Records.h
src/helpers/: Util.cpp  Util.h
